--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>AniDeluxe | Премиум аниме смотреть онлайн бесплатно</title>
+    <meta
+      name="description"
+      content="AniDeluxe — эстетичное и качественное аниме онлайн. Подборки, философия, вечные тайтлы, премиум аниме, смотреть онлайн, бесплатно."
+    />
+    <!-- Соцсети (если кто-то делится ссылкой) -->
+
+    <meta property="og:title" content="AniDeluxe — Премиум аниме смотреть онлайн бесплатно" />
+    <meta
+      property="og:description"
+      content="Смотри лучшее аниме с подборками и смыслом. Без рекламы."
+    />
+    <meta property="og:url" content="https://anideluxe.ru" />
+
+    <!-- Цвет в адресной строке браузера -->
+    <meta name="theme-color" content="#111827" />
   </head>
   <body>
     <div id="root"></div>
