--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <!-- Поддержка мобильных устройств -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta property="og:image" content="/og-image.jpg" />
     <title>AniDeluxe | Премиум аниме смотреть онлайн бесплатно</title>
     <meta
       name="description"
       content="AniDeluxe — эстетичное и качественное аниме онлайн. Подборки, философия, вечные тайтлы, премиум аниме, смотреть онлайн, бесплатно."
     />
-
+    <!-- Автор -->
+    <meta name="author" content="AniDeluxe" />
     <!-- Соцсети (если кто-то делится ссылкой) -->
-    <meta property="og:title" content="AniDeluxe — Премиум аниме смотреть онлайн бесплатно" />
+    <meta
+      property="og:title"
+      content="AniDeluxe — Премиум аниме смотреть онлайн бесплатно"
+    />
     <meta
       property="og:description"
       content="Смотри лучшее аниме с подборками и смыслом. Без рекламы."
     />
     <meta property="og:url" content="https://anideluxe.ru" />
-
+    <!-- Ключевые слова -->
+    <meta
+      name="keywords"
+      content="аниме, философия, эстетика, смотреть аниме, anideluxe, вечные тайтлы, без рекламы, премиум аниме, бесплатно"
+    />
+    <!-- Языки -->
+    <meta http-equiv="Content-Language" content="ru" />
     <!-- Цвет в адресной строке браузера -->
     <meta name="theme-color" content="#111827" />
   </head>
