--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- Поддержка мобильных устройств -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="/favicon.png" />
     <meta property="og:image" content="/og-image.jpg" />
     <title>AniDeluxe | Премиум аниме смотреть онлайн бесплатно</title>
     <meta
