--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:description"
-      content="Смотри лучшее аниме с подборками и смыслом. Без рекламы."
+      content="Смотри лучшее аниме с подборками и смыслом. Без рекламы. AniDeluxe — это то, что вам нужно. Удивительные путешествия, магия, фантазийные персонажи, головокружительные приключения, страсть и романтика переплетаются в динамичных сюжетах, которые сопровождаются оригинальной рисовкой, покорившей все уголки мира..."
     />
     <meta property="og:url" content="https://anideluxe.ru" />
     <!-- Ключевые слова -->
