--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.png" />
     <meta property="og:image" content="/og-image.jpg" />
-    <title>AniDeluxe | Премиум аниме смотреть онлайн бесплатно</title>
+    <title>AniDeluxe | Премиум аниме смотреть онлайн бесплатно в озвучке AniLiberty (AniLibria)</title>
     <meta
       name="description"
       content="AniDeluxe — эстетичное и качественное аниме онлайн. Подборки, философия, вечные тайтлы, премиум аниме, смотреть онлайн, бесплатно."
