--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <meta http-equiv="Content-Language" content="ru" />
     <!-- Цвет в адресной строке браузера -->
     <meta name="theme-color" content="#111827" />
+    <meta name="zen-verification" content="eBLdrsCQRFJnCk6Esa0e2hNRTejqR4uoylsJIk4bFAOxUocRBTD5ApFeWk8sFafn" />
   </head>
   <body>
     <div id="root"></div>
